pipeline/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db2app1war
  name: db2app1war
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: db2app1war
